# faktspense

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: AUTOTEST.md  SMOKE.md
scripts/: e2e_real.py
src/fakturoid_naklady/: cli.py  export.py  models.py  pipeline.py
src/fakturoid_naklady/extraction/: claude.py  renderer.py  validation.py
src/fakturoid_naklady/fakturoid/: auth.py  client.py  expenses.py  subjects.py
tests/: conftest.py  test_sanity.py
tests/e2e/: test_cli.py
tests/integration/: test_client.py  test_expenses.py  test_subjects.py
tests/unit/: test_claude_parsing.py  test_export.py  test_models.py  test_pipeline.py  test_renderer.py  test_validation.py
