[project]
name = "faktspense"
version = "0.1.0"
description = "CLI that extracts invoice data from PDFs with Claude and imports them as expenses into Fakturoid.cz"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Josef Brehovsky", email = "josef.brehovsky@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.6",
    "pymupdf>=1.24.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
faktspense = "fakturoid_naklady.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fakturoid_naklady"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",
    "syrupy>=4.6",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",  # pycodestyle + pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
# B008: typer idiom requires function calls in argument defaults (typer.Argument / typer.Option).
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/fakturoid_naklady"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
